# id-fraud-detection

./: .commitlintrc.json  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Pyrightconfig.json  README.md  app.py  cliff.toml  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
.github/: CODEOWNERS  branch-protection.md  monitoring.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  model_issue.md
.github/workflows/: cd.yml  changelog.yml  ci.yml  ct.yml  monitoring.yml
great_expectations/gx/: great_expectations.yml
great_expectations/gx/expectations/: .ge_store_backend_id  idnet_test_bad_label_suite.json  idnet_test_empty_suite.json  idnet_test_missing_col_suite.json  idnet_test_pass_suite.json  (+4 more)
src/api/: main.py  predictor.py  schemas.py
src/data/: dataset.py  download.py  pipeline.py  preprocess.py  upload_to_s3.py
src/models/: config.py  efficientnet.py  evaluate.py  register_model.py  simulate_threshold.py  train.py
src/monitoring/: bootstrap_reference.py  build_reference_csv.py  generate_predictions.py  generate_train_with_preds.py  log_reference_to_mlflow.py  monitor_pro.py  run_monitoring_pipeline.py
src/training/: retrain_pipeline.py
tests/: conftest.py  pytest.ini
tests/integration/: test_evaluate.py  test_pipeline.py
tests/unit/: test_build_reference_csv.py  test_config.py  test_dataset.py  test_efficientnet.py  test_generate_predictions.py  test_preprocess.py  test_retrain_pipeline.py  test_simulate_threshold.py  test_train.py  test_validate.py
(+1 files in other folders)
