[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Document fraud detection pipeline — EfficientNet-B0 + MLflow + HF Spaces"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=src --cov-report=term-missing --cov-report=xml"

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "spaces/*"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310"]
[dependency-groups]
lint = [
    "black==26.3.1",
    "ruff==0.15.6",
]
